fixing date-picker on mobile

--- a/src/assets/styles/setup/mq-StayFilter.css
+++ b/src/assets/styles/setup/mq-StayFilter.css
@@ -14,11 +14,13 @@
     padding: 0.625rem 1.1875rem;
     width: 100vw;
     height: 2.1875rem;
+
     &::placeholder {
         color: black;
         font-weight: 500;
         text-align: center;
     }
+
     &:focus {
         border: none;
 
@@ -29,6 +31,7 @@
     .main-container {
         display: flex;
         flex-direction: column;
+
         >.app-header {
             display: flex;
             flex-direction: column;
@@ -37,6 +40,7 @@
             /* overflow-y: auto; */
             background-color: #f1f1f1;
         }
+
         /* overflow: hidden;
         overflow-y: hidden; */
         /* overflow-x: hidden; */
@@ -50,21 +54,24 @@
         height: 100vh;
         width: 100vw;
         position: relative;
+
         >.x-btn {
+            display: grid;
+            place-items: center;
             position: absolute;
             z-index: 100;
-            right: 0.8rem;
-            top: 0.8rem;
+            right: 0.7rem;
+            top: 0.5rem;
             height: 2rem;
-            width: 2rem;
+            padding: 5px 1px;
             border-radius: 50%;
             color: black;
             background-color: #fff;
             border: 1px solid #ddd;
             cursor: pointer;
         }
+
         >li {
-            
             >.filter-btn {
                 width: 80vw;
                 background-color: #fff;
@@ -85,6 +92,7 @@
                 justify-content: space-between;
                 position: absolute;
                 bottom: 1rem;
+
                 >a {
                     text-decoration: underline;
                     cursor: pointer;
@@ -102,12 +110,13 @@
 
     }
 
-    .mobile-modal{
+    .mobile-modal {
         display: flex;
         flex-direction: column;
-        border-radius:1rem;
+        border-radius: 1rem;
         width: 80vw;
-        >span{
+
+        >span {
             padding-left: 2rem;
             font-weight: 600;
             font-size: 1.5rem;
@@ -129,14 +138,15 @@
 @media screen and (max-width: 400px) {
     .mobile-filter {
 
-    > li {
-            margin-right: 60px;
+        >li {
+            /* margin-right: 60px; */
         }
-    >.x-btn{
-        margin-right: 20px;
 
+        >.x-btn {
+            /* margin-right: 20px; */
+        }
     }
-    }
+
     /* Scale down inputs and interactive elements */
     .mobile-modal input,
     .mobile-modal textarea,
@@ -144,7 +154,17 @@
     .mobile-modal button {
         font-size: 0.875rem;
         padding: 0.5rem;
+        max-width: 75vw;
         /* width:initial; */
+    }
+
+    li.suggestion {
+        max-width: 75vw;
+    }
+
+    .rdp-root {
+        --rdp-day_button-height: 2.2rem;
+        --rdp-day_button-width: 2.2rem;
     }
 
     .mobile-modal .guest-picker-container,
